Kubernetes-manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres
  namespace: stateful-demo

spec:
  # Must match the Headless Service name
  serviceName: postgres

  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: postgres

          image: postgres:18
          imagePullPolicy: IfNotPresent

          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d employee-managementdb

            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d employee-managementdb

            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

  # Kubernetes automatically creates one PVC per StatefulSet Pod.
  volumeClaimTemplates:

    - metadata:
        name: postgres-data

      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: standard-rwo

        resources:
          requests:
            storage: 5Gi
