Kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employment-management
  labels:
    app: employment-management
spec:
  type: ClusterIP
  selector:
    app: employment-management
  ports:
    - name: http
      port: 8180
      targetPort: 8180
      protocol: TCP
